// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col Align Self renders center self alignment if provided 1`] = `
<div
  className="Col-jCOnJH col align-self-center ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Align Self renders end self alignment if provided 1`] = `
<div
  className="Col-jCOnJH col align-self-end ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Align Self renders start self alignment if provided 1`] = `
<div
  className="Col-jCOnJH col align-self-start ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders around justify content if provided 1`] = `
<div
  className="Col-jCOnJH col justify-content-around ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders between justify content if provided 1`] = `
<div
  className="Col-jCOnJH col justify-content-between ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders center justify content if provided 1`] = `
<div
  className="Col-jCOnJH col justify-content-center ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders end justify content if provided 1`] = `
<div
  className="Col-jCOnJH col justify-content-end ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Justify Content renders start justify content if provided 1`] = `
<div
  className="Col-jCOnJH col justify-content-start ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders lg offset if provided 1`] = `
<div
  className="Col-jCOnJH offset-lg-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders md offset if provided 1`] = `
<div
  className="Col-jCOnJH offset-md-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders sm offset if provided 1`] = `
<div
  className="Col-jCOnJH offset-sm-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders xl offset if provided 1`] = `
<div
  className="Col-jCOnJH offset-xl-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Offsets renders xs offset if provided 1`] = `
<div
  className="Col-jCOnJH offset-xs-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Order renders pseudo order if provided 1`] = `
<div
  className="Col-jCOnJH col order-first ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
  order="first"
/>
`;

exports[`Col Order renders string based order if provided 1`] = `
<div
  className="Col-jCOnJH col order-md-12 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
  order="md-12"
/>
`;

exports[`Col Sizing renders boolean size if provided 1`] = `
<div
  className="Col-jCOnJH col-sm ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders lg size if provided 1`] = `
<div
  className="Col-jCOnJH col-lg-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders md size if provided 1`] = `
<div
  className="Col-jCOnJH col-md-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders number size if provided 1`] = `
<div
  className="Col-jCOnJH col-4 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
  size={4}
/>
`;

exports[`Col Sizing renders sm size if provided 1`] = `
<div
  className="Col-jCOnJH col-sm-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders xl size if provided 1`] = `
<div
  className="Col-jCOnJH col-xl-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col Sizing renders xs size if provided 1`] = `
<div
  className="Col-jCOnJH col-xs-6 ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;

exports[`Col renders default styling 1`] = `
<div
  className="Col-jCOnJH col ObzyD"
  data-garden-id="grid.col"
  data-garden-version="version"
/>
`;
